# mupen64-rr-lua

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  cliff.toml  vcpkg.json  vsdev.cmd
src/: CMakeLists.txt  Plugins.Common.cmake
src/Common/: CMakeLists.txt
src/Common/include/: CommonPCH.h  DummyPluginStub.h  IOUtils.h  MiscHelpers.h  StrUtils.h  VersionNameHelpers.h
src/Core/: CMakeLists.txt  Core.cpp  Core.h  alloc.cpp  alloc.h  cheats.cpp  cheats.h
src/Core/include/: core_api.h  core_plugin.h  core_types.h
src/Core/memory/: dma.cpp  dma.h  flashram.cpp  flashram.h  memory.cpp  memory.h  pif.cpp  pif.h  pif_lut.cpp  pif_lut.h  savestates.cpp  savestates.h  summercart.cpp  summercart.h  tlb.cpp  tlb.h
src/Core/r4300/: Debug.cpp  Debug.h  bc.cpp  cop0.cpp  cop1.cpp  cop1_d.cpp  cop1_helpers.cpp  cop1_helpers.h  cop1_l.cpp  cop1_s.cpp  cop1_w.cpp  debugger.cpp  debugger.h  disasm.cpp  disasm.h  exception.cpp  exception.h  interrupt.cpp  interrupt.h  macros.h  ops.h  pure_interp.cpp  r4300.cpp  r4300.h  recomp.cpp  recomp.h  recomph.h  regimm.cpp  rom.cpp  rom.h  special.cpp  timers.cpp  timers.h  tracelog.cpp  tracelog.h  vcr.cpp  vcr.h
src/Lua/: api.lua  sandbox.lua  shims.lua
src/Plugins.Audio.TAS/: ABI_Envmixer.cpp  ABI_Filters.cpp  CMakeLists.txt  Common.h  Configuration.cpp  DirectSoundDriver.cpp  HLEMain.cpp
src/Plugins.Audio.TAS/Mupen64plusHLE/: common.h  memory.h
src/Plugins.Win32.DummyAudio/: CMakeLists.txt  Main.cpp  Main.h
src/Plugins.Win32.DummyInput/: CMakeLists.txt  Main.cpp  Main.h
src/Plugins.Win32.DummyRSP/: CMakeLists.txt  Main.cpp  Main.h
src/Plugins.Win32.DummyVideo/: CMakeLists.txt  Main.cpp  Main.h
src/Plugins.Win32.TASAudio/: ABI1.cpp  ABI2.cpp  ABI3.cpp  ABI3mp3.cpp  ABI_Adpcm.cpp  ABI_Buffers.cpp  ABI_Envmixer.cpp  ABI_Filters.cpp  ABI_MixerInterleave.cpp  ABI_Resample.cpp  AudioHLE.h  CMakeLists.txt  Common.h  Configuration.cpp  Configuration.h  DirectSoundDriver.cpp  DirectSoundDriver.h  HLEMain.cpp  Main.cpp  Resource.h  Resource.rc  SoundDriver.cpp  SoundDriver.h  SoundDriverInterface.cpp  SoundDriverInterface.h  Types.h
src/Plugins.Win32.TASAudio/Mupen64plusHLE/: Mupen64Support.cpp  audio.cpp  audio.h  common.h  hle_external.h  hle_internal.h  memory.cpp  memory.h  musyx.cpp  ucodes.h
src/Plugins.Win32.TASInput/: CMakeLists.txt  Combo.cpp  Combo.h  Common.h  ConfigDialog.cpp  ConfigDialog.h  GamepadManager.cpp  GamepadManager.h  Helpers.h  JoystickControl.cpp  JoystickControl.h  Main.cpp  Main.h  NewConfig.cpp  NewConfig.h  Resource.h  Resource.rc  TASInput.cpp  TASInput.h
src/Plugins.Win32.TASRSP/: CMakeLists.txt  Config.cpp  Config.h  Disasm.cpp  Disasm.h  HLE.h  JPEG.cpp  MP3.cpp  Main.cpp  Main.h  UCode1.cpp  UCode2.cpp  UCode3.cpp  stdafx.cpp  stdafx.h
src/Plugins.Win32.TASVideo/: 2xSAI.cpp  2xSAI.h  3DMath.h  CMakeLists.txt  CRC.cpp  CRC.h  Combiner.cpp  Combiner.h  Config.cpp  Config.h  Debug.h  DepthBuffer.cpp  DepthBuffer.h  F3D.cpp  F3D.h  F3DDKR.cpp  F3DDKR.h  F3DEX.cpp  F3DEX.h  F3DEX2.cpp  F3DEX2.h  F3DPD.cpp  F3DPD.h  F3DWRUS.cpp  F3DWRUS.h  FrameBuffer.cpp  FrameBuffer.h  GBI.cpp  GBI.h  L3D.cpp  L3D.h  L3DEX.cpp  L3DEX.h  L3DEX2.cpp  L3DEX2.h  N64.cpp  N64.h  NV_register_combiners.cpp  NV_register_combiners.h  OpenGL.cpp  (+26 more)
src/Views.Win32/: ActionManager.cpp  ActionManager.h  CMakeLists.txt  Config.cpp  Config.h  DialogService.cpp  DialogService.h  Hotkey.cpp  Hotkey.h  Loggers.cpp  Loggers.h  Main.cpp  Main.h  Messenger.cpp  Messenger.h  Plugin.cpp  Plugin.h  ResizeAnchor.cpp  ResizeAnchor.h  Resource.rc  ThreadPool.cpp  ThreadPool.h  ViewHelpers.h  resource.h  stdafx.h
src/Views.Win32/capture/: CaptureManager.cpp  CaptureManager.h  EncodingManager.cpp  EncodingManager.h  Resampler.cpp  Resampler.h
src/Views.Win32/components/: ActionMenu.cpp  ActionMenu.h  AppActions.cpp  AppActions.h  Benchmark.cpp  Benchmark.h  CLI.cpp  CLI.h  Cheats.cpp  Cheats.h  CommandPalette.cpp  CommandPalette.h  (+44 more)
src/Website/: package.json
(+108 files in other folders)
